create tooltip displaying county and state names as well as education rate

--- a/app/stylesheets/style.css
+++ b/app/stylesheets/style.css
@@ -1,4 +1,8 @@
+@import url("//rawgithub.com/Caged/d3-tip/master/examples/example-styles.css");
 #container {
+  text-align: center; }
+
+#tooltip {
   text-align: center; }
 
 .county {
