--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -1,4 +1,10 @@
+@import url('//rawgithub.com/Caged/d3-tip/master/examples/example-styles.css');
+
 #container {
+    text-align: center;
+}
+
+#tooltip {
     text-align: center;
 }
 
