--- a/app/stylesheets/style.css
+++ b/app/stylesheets/style.css
@@ -1,5 +1,5 @@
 @import url("//rawgithub.com/Caged/d3-tip/master/examples/example-styles.css");
-#container {
+#main {
   text-align: center; }
 
 #tooltip {
@@ -7,3 +7,6 @@
 
 .county {
   border: 1px solid white; }
+
+.map {
+  display: inline-block; }
